work on the documentation
